# product-onboarding-agent

./: .env.example  README.md  output.txt  pyproject.toml
docai/: bank-statement-set-version.json  create_docai_processor.sh  set-bank-processor-version.sh  us-bank-statement.json  us-dl-request.json  us-id-proofing.json
product_onboarding/: agent.py  evalseta83919.evalset.json  prompt.py
product_onboarding/shared_libraries/: constants.py  types.py
product_onboarding/sub_agents/kyc_check/: agent.py  prompt.py
product_onboarding/sub_agents/product_recommender/: agent.py  prompt.py  vaisearch.py
product_onboarding/sub_agents/qualify_customer/: agent.py  prompt.py
product_onboarding/tools/: docai.py  places.py  salesforce.py  search.py
tests/eval/: test_eval.py
tests/eval/data/: ACMECorp.evalset.json
tests/integration/: test_docai_tools.py  test_knowledgebase_search.py  test_places_tool.py
tests/unit/: test_tools.py
